[package]
name = "wade"
version = "0.1.0"
edition = "2021"

[dependencies]
encryptfile = "0.1.3"
openssl = "0.10.66"
mongodb = "2.4.0-beta"
bson = { version = "2", features = ["chrono-0_4"] } # Needed for using chrono datetime in doc
chrono = "0.4.38"
tokio = { version = "1", features = ["full"] }
serde = "1" # Used in the Map Data into Structs section
dotenv = "0.15.0"
socketioxide = "0.14.1"
axum = "0.7.5"
tower-http = {version ="0.5.2", features = ["cors"]}
http = "1.1.0"
axum-util = "0.2.2"
tower = "0.5.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
socket2 = "0.5.7"
serde_json = "1.0.128"
base64 = "0.22.1"
rand = { version = "0.8.4", features = ["std"] }
random_name_generator = "0.3.6"
home = "0.5.9"